style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Lato', 'Montserrat', 'Roboto', sans-serif;
    display: flex;
    /* flex-direction: column; */
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    background-image: url('assets/TriConnect_BG.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    gap: 100px;
}

.menu-panel {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
    background-color: rgba(250, 232, 193, 0.5);
    gap: 20px;
}

.score-panel {
    padding: 10px;
    border-radius: 10px;    
    width: 200px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.settings-panel {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

.setting {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    font-weight: bold;
    font-size: 20px;
}

.player {
    /* margin-bottom: 15px; */
    padding: 10px;
    border-radius: 5px;
}

.player.active {
    /* border-left: 5px solid #000000;  */
    box-shadow: 0 0 20px rgb(255, 0, 238);
}

.player-1 {
    background-color: rgba(0, 0, 255, 0.6);
    color: #ffffff;
}

.player-2 {
    background-color: rgba(255, 0, 0, 0.6);
    color: #ffffff;
}

.player-name {
    font-weight: bold;
    text-align: center;
    font-size: 18px;
}

.player-score {
    font-size: 30px;
    text-align: center;
    margin-top: 5px;
}

button {
    padding: 10px 15px;
    border: none;
    border-radius: 15px;
    background-color: #d86902;
    color: white;
    font-size: 20px;
    cursor: pointer;
    transition: background-color 0.3s;
    border: 5px outset maroon;
}

button:hover {
    background-color: #976502;
}

/* #restart-btn {
    padding: 0;
    height: fit-content;
} */

.board-svg {
    display: block;
}

.node {
    fill: #333;
    /* r: 6; */
    /* cursor: pointer; */
}

.line {
    stroke: #ddd;
    stroke-width: 5;
    cursor: pointer;
    transition: stroke 0.3s;
}

.line:hover:not(.selected) {
    stroke: #aaa;
}

.line.selected.player-1 {
    stroke: #0000ff;
}

.line.selected.player-2 {
    stroke: #ff0000;
}

.triangle {
    opacity: 0.5;
}

.triangle.player-1 {
    fill: #0000ff;
}

.triangle.player-2 {
    fill: #ff0000;
}

.game-over {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0.9);
    padding: 20px;
    border-radius: 10px;
    text-align: center;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    display: none;
}

.winner {
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 10px;
    color: white;
}

.player-1-text {
    color: #0000ff;
}

.player-2-text {
    color: #ff0000;
}

#firstToPlay {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#ai-status {
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 20px;
    color: purple;
    text-shadow: 2px 2px 5px violet;
}

input[type="range"] {
    -webkit-appearance: none; 
    appearance: none;
    background: darkorange; 
    width: 100%; 
    height: 10px; 
}

/* Chrome, Safari, Edge, Opera */
input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px; 
    height: 20px; 
    background: maroon; 
    cursor: pointer;
    border-radius: 80%; 
}

